# experimental-ext-skills

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.claude/skills/run-scenario/: SKILL.md
.claude/skills/run-scenario/scenarios/: hf-jobs-plan.md  hf-train-with-monitoring.md  pr-review.md  transformers-js-demo.md
.github/: CODEOWNERS
docs/: approaches.md  client-mcp-support.md  convention-vs-new-primitive.md  decisions.md  experimental-findings.md  findings-template.md  glossary.md  mcp-resources.md  open-questions.md  problem-statement.md  related-work.md  sep-draft-skills-extension.md  skill-meta-keys.md  skill-mime-type.md  skill-uri-scheme.md  skills-extension-candidates.md  use-cases.md  why-and-when.md
docs/findings/scenarios/: hf-jobs-plan.md  hf-train-with-monitoring.md  index.md  pr-review.md  transformers-js-demo.md
docs/research/: client-mcp-support.md  client-resources-research.md
examples/: ARCHITECTURE.md  README.md
examples/dynamic-server-loading/typescript/: README.md  package-lock.json  package.json
examples/dynamic-server-loading/typescript/src/: index.ts
examples/resource-template-discovery/: README.md
examples/resource-template-discovery/typescript/: integration-test.ts  package-lock.json  package.json  real-server-test.ts
examples/resource-template-discovery/typescript/src/: server.ts
examples/sample-archive-source/pdf-processing/: SKILL.md
examples/sample-archive-source/pdf-processing/references/: FORMS.md
examples/sample-skills/acme/onboarding/: SKILL.md
examples/sample-skills/code-review/: SKILL.md
examples/sample-skills/code-review/references/: REFERENCE.md
examples/sample-skills/explore-everything/: SKILL.md
examples/sample-skills/git-commit-review/: SKILL.md
examples/skills-as-resources/: README.md
examples/skills-as-resources/python/: pyproject.toml
examples/skills-as-resources/python/src/skills_as_resources/: resource_helpers.py  server.py  skill_discovery.py
examples/skills-as-resources/typescript/: package-lock.json  package.json  smoke-test.js
examples/skills-as-resources/typescript/src/: index.ts  resource-helpers.ts  types.ts  (+3 more)
examples/skills-as-tools/: README.md
examples/skills-as-tools/python/: pyproject.toml
examples/skills-as-tools/python/src/skills_as_tools/: server.py  skill_discovery.py
examples/skills-as-tools/typescript/: package-lock.json  package.json
examples/skills-client/typescript/: package-lock.json  package.json
examples/skills-server/typescript/: package-lock.json  package.json  tsconfig.json
examples/skills-workaround-patterns/: README.md
examples/skills-workaround-patterns/typescript/: package-lock.json  package.json  smoke-test.js
experiments/: README.md
experiments/harnesses/_common/: __init__.py  pr.py  report.py  scenario.py  setup.py  tokens.py
experiments/harnesses/codex/: README.md  agent.py
experiments/harnesses/fast-agent/: README.md  agent.py  fastagent.config.yaml  pyproject.toml
experiments/harnesses/gemini-cli/: README.md  agent.py
experiments/harnesses/goose/: README.md  agent.py
experiments/scenarios/: hf-jobs-plan.yaml  hf-train-with-monitoring.yaml  pr-review.yaml  transformers-js-demo.yaml
experiments/scripts/: bootstrap.sh
plugins/skills-over-mcp/: README.md
plugins/skills-over-mcp-wg/: .mcp.json  README.md
plugins/skills-over-mcp-wg/.claude-plugin/: plugin.json
plugins/skills-over-mcp/.claude-plugin/: plugin.json
python/: .gitignore
python/sdk/: CLAUDE.md  LICENSE  README.md  pyproject.toml
python/sdk/src/mcp_experimental_ext_skills/: __init__.py  _archive.py  _client.py  _mime.py  _resource_extensions.py  _server.py  _types.py  _uri.py  _xml.py
python/sdk/src/mcp_experimental_ext_skills/client/: __init__.py
python/sdk/src/mcp_experimental_ext_skills/server/: __init__.py
python/sdk/tests/: conftest.py  test_archive.py  test_client.py  test_index_json.py  test_register.py  test_uri.py
seps/: 0000-mcp-native-skills.md
typescript/sdk/: .eslintrc.json  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
typescript/sdk/src/: _client.test.ts  _client.ts  _server.test.ts  _server.ts  archive.test.ts  archive.ts  catalog.test.ts  catalog.ts  client.test.ts  client.ts  directory.test.ts  directory.ts  discover.test.ts  index-json.test.ts  index.ts  instructions.test.ts  mime.ts  read-skill.test.ts  register.test.ts  resource-extensions.ts  server.test.ts  server.ts  template.test.ts  template.ts  types.ts  uri.test.ts  uri.ts  well-known.test.ts  well-known.ts  xml.test.ts  xml.ts
(+22 files in other folders)
