[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-experimental-ext-skills"
version = "0.1.0"
description = "Python SDK for the MCP Skills Extension (SEP-2640)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Skills Over MCP Working Group" }]
keywords = ["mcp", "model-context-protocol", "skills", "agent-skills", "sep-2640"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.6",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/modelcontextprotocol/experimental-ext-skills"
Repository = "https://github.com/modelcontextprotocol/experimental-ext-skills"
Issues = "https://github.com/modelcontextprotocol/experimental-ext-skills/issues"
"SEP-2640" = "https://github.com/modelcontextprotocol/modelcontextprotocol/pull/2640"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_experimental_ext_skills"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    # pytest-asyncio leaves event loops open between tests on Windows; not an SDK bug.
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line-too-long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
