[project]
name = "skills-as-tools-example"
version = "0.1.0"
description = "Minimal reference implementation: Skills as MCP Tools (Approach 3)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]
license = "Apache-2.0"

[project.scripts]
skills-as-tools = "skills_as_tools.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_as_tools"]
